--- a/www/index.html
+++ b/www/index.html
@@ -51,11 +51,25 @@
           <button class="btn btn-primary btn-block" id="buscar">Buscar</button>
         </div>
       </div>
+     </div>
       <div class="row">
         <div class="col-12">
-          <div id="dados"></div>
+          <div class="form-group">
+            <label for="">Cidade:</label>
+            <input type="number" class="form-control" id="cidade">
         </div>
       </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="">Estado:</label>
+            <input type="number" class="form-control" id="estado">
+        </div>
+      </div>
+    </div>
+
+
   </div>
   </div>
 </body>
