city, state, district and street labels

--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
         <div class="col-12">
           <div class="form-group">
             <label for="">Cidade:</label>
-            <input type="number" class="form-control" id="cidade">
+            <input type="number" class="form-control" id="cidade" readonly>
         </div>
       </div>
     </div>
@@ -64,10 +64,27 @@
         <div class="col-12">
           <div class="form-group">
             <label for="">Estado:</label>
-            <input type="number" class="form-control" id="estado">
+            <input type="number" class="form-control" id="estado" readonly>
         </div>
       </div>
     </div>
+     <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="">Bairro:</label>
+            <input type="number" class="form-control" id="bairro" readonly>
+        </div>
+      </div>
+    </div>
+     <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="">Rua:</label>
+            <input type="number" class="form-control" id="rua" readonly> 
+        </div>
+      </div>
+    </div>
+    
 
 
   </div>
