changing number to text, missed this one

--- a/www/index.html
+++ b/www/index.html
@@ -52,19 +52,19 @@
         </div>
       </div>
      </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="form-group">
-            <label for="">Cidade:</label>
-            <input type="number" class="form-control" id="cidade" readonly>
-        </div>
-      </div>
-    </div>
     <div class="row">
         <div class="col-12">
           <div class="form-group">
             <label for="">Estado:</label>
-            <input type="number" class="form-control" id="estado" readonly>
+            <input type="text" class="form-control" id="estado" readonly>
+        </div>
+      </div>
+    </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="form-group">
+            <label for="">Cidade:</label>
+            <input type="text" class="form-control" id="cidade" readonly>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         <div class="col-12">
           <div class="form-group">
             <label for="">Bairro:</label>
-            <input type="number" class="form-control" id="bairro" readonly>
+            <input type="text" class="form-control" id="bairro" readonly>
         </div>
       </div>
     </div>
@@ -80,22 +80,11 @@
         <div class="col-12">
           <div class="form-group">
             <label for="">Rua:</label>
-            <input type="number" class="form-control" id="rua" readonly> 
+            <input type="text" class="form-control" id="rua" readonly> 
         </div>
       </div>
     </div>
-    
-
-
-  </div>
   </div>
 </body>
 </html>
 
-
-
-</head>
-<body>
-  
-</body>
-</html>
